--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-cd rfmaths.github.io
-echo "Bonjour tout le monde" > index.html
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
