--- a/run.html
+++ b/run.html
@@ -80,7 +80,7 @@
 &nbsp;&nbsp;
 <a href="https://davidcarlisle.github.io/latexcgi/">Server documentation (GitHub)</a>
 &nbsp;&nbsp;
-<a href="https://TeXTest.net/">TeXTest.net Home</a>
+<a href="https://TeXLive.net/">TeXLive.net Home</a>
 </div>
 <hr>
 <div class="h">
