--- a/run.html
+++ b/run.html
@@ -81,7 +81,7 @@
 <a href="https://davidcarlisle.github.io/latexcgi/">Server documentation (GitHub)</a>
 &nbsp;&nbsp;
 <a href="https://TeXLive.net/">TeXLive.net Home</a>
-<button  download="Article_HTML5_download.txt">Télécharger </button>
+<button href="https://rfmaths.github.io/run.html" download="defaut.tex">Télécharger </button>
 </div>
 <hr>
 <div class="h">
