--- a/run.html
+++ b/run.html
@@ -81,7 +81,7 @@
 <a href="https://davidcarlisle.github.io/latexcgi/">Server documentation (GitHub)</a>
 &nbsp;&nbsp;
 <a href="https://TeXLive.net/">TeXLive.net Home</a>
-<button href="https://rfmaths.github.io/run.html" download="defaut.tex">Télécharger </button>
+<input type = "button" id = "save" value = "enregistrer"  onclick = 'enregistrer()'/>
 </div>
 <hr>
 <div class="h">
