--- a/simplex.html
+++ b/simplex.html
@@ -219,7 +219,7 @@ input[type="color"]:focus,
 <div class="container visible-xs">
 <div class="row">
 <div class="col-xs-12 text-center">
-<h4 class="no-strong">Packages personnels avec <a href="https://github.com/jmkim/simplex">Simplex</a></h4>
+<h4 class="no-strong">Packages personnels avec <a href="https://github.com/rfmaths/rfSimplex">Simplex</a></h4>
 </div>
 </div><!-- row -->
 </div><!-- container -->
@@ -227,7 +227,7 @@ input[type="color"]:focus,
 <div class="container hidden-xs">
 <div class="row">
 <div class="col-sm-8 text-left">
-<h4 class="no-strong">Packages personnels avec <a href="https://github.com/jmkim/simplex">Simplex</a></h4>
+<h4 class="no-strong">Packages personnels avec <a href="https://github.com/rfmaths/rfSimplex">Simplex</a></h4>
 </div>
 
 <div class="col-sm-1 col-sm-offset-3 pull-right">
