--- a/run.html
+++ b/run.html
@@ -87,7 +87,7 @@
 <pre id="pre0">\documentclass{article}
 \usepackage{amsmath}
 \begin{document}
-
+Pour enregistrer votre code, veuillez le copier-coller.
 \end{document}</pre>
 </div>
 </body>
