Update and rename run.html to rfRun.html

--- a/rfRun.html
+++ b/rfRun.html
@@ -16,7 +16,7 @@
       a { text-decoration:none; color:#5555FF}
       a:hover	   {text-decoration:underline}
     </style>
-    <script src="https://rfmaths.github.io/runlatex.js"></script>
+    <script src="https://rfmaths.github.io/rfRunlatex.js"></script>
     <script>
 
       runlatex.editorlines=40;
@@ -80,15 +80,17 @@
 &nbsp;&nbsp;
 <a href="https://davidcarlisle.github.io/latexcgi/">Server documentation (GitHub)</a>
 &nbsp;&nbsp;
-<a href="https://TeXLive.net/">TeXLive.net Home</a>
+<a href="https://texlive.net/">TeXLive.net Home</a>
 </div>
 <hr>
 <div class="h">
 <pre id="pre0">\documentclass{article}
 \usepackage{amsmath}
 \begin{document}
-Pour enregistrer votre code, veuillez le copier-coller.
+
 \end{document}</pre>
 </div>
+<hr>
+<a href="https://github.com/sponsors/davidcarlisle/">Copyright 2020&ndash;2024 David Carlisle</a>
 </body>
   
