--- a/rfRun.html
+++ b/rfRun.html
@@ -87,10 +87,9 @@
 <pre id="pre0">\documentclass{article}
 \usepackage{amsmath}
 \begin{document}
-
+     Affichage par défaut
 \end{document}</pre>
 </div>
 <hr>
-<a> ... </a>
 </body>
   
