Update and rename rfRun.html to rfRunTex.html

--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -16,7 +16,7 @@
       a { text-decoration:none; color:#5555FF}
       a:hover	   {text-decoration:underline}
     </style>
-    <script src="https://rfmaths.github.io/rfRunlatex.js"></script>
+    <script src="https://rfmaths.github.io/rfRunTex.js"></script>
     <script>
 
       runlatex.editorlines=40;
