--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -60,13 +60,13 @@
   <body>
 
 <hr>
-......
+Cliquer sur "Compiler" pour exécuter le code. Effectuer un copier/coller pour le sauvegarder.
 <hr>
 <div class="h">
 <pre id="pre0">\documentclass{article}
 \usepackage{amsmath}
 \begin{document}
-     Affichage par défaut
+    Affichage par défaut
 \end{document}</pre>
 </div>
 <hr>
