--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -60,7 +60,7 @@
   <body>
 
 <hr>
-Cliquer sur "Compiler" pour exécuter le code. Effectuer un copier/coller pour le sauvegarder.
+Cliquer sur "TeXLive.net" pour exécuter le code. Effectuer un copier/coller pour le sauvegarder.
 <hr>
 <div class="h">
 <pre id="pre0">\documentclass{article}
