--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -26,7 +26,7 @@
       runlatex.overleafURI=null;
       
       runlatex.texts ={
-	  "Open in Overleaf": "",
+	  "Open in Overleaf": "Open in Overleaf",
 	  "TeXLive.net":      "TeXLive.net", 
 	  "Delete Output":    "Delete Output",
 	  "Compiling PDF":    "Compiling PDF or HTML",
