--- a/runtextest.html
+++ b/runtextest.html
@@ -23,7 +23,7 @@
       runlatex.adddefaultpreamble=true;
       runlatex.adddefaultengine=true;
 
-      runlatex.overleafURI=true;
+      runlatex.overleafURI=null;
       
       runlatex.texts ={
 	  "Open in Overleaf": "ovf",
