--- a/runtextest.html
+++ b/runtextest.html
@@ -26,7 +26,7 @@
       runlatex.overleafURI=null;
       
       runlatex.texts ={
-	  "Open in Overleaf": "ovf",
+	  "Open in Overleaf": "Overlf",
 	  "TeXLive.net":      "TeXLive.net", 
 	  "Delete Output":    "Delete Output",
 	  "Compiling PDF":    "Compiling PDF or HTML",
