--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -66,7 +66,7 @@ Cliquer sur "TeXLive.net" pour exécuter le code. Effectuer un copier/coller pou
 <pre id="pre0">\documentclass{article}
 \usepackage{amsmath}
 \begin{document}
-    Affichage par défaut
+    \textbf{Test : Affichage par défaut}
 \end{document}</pre>
 </div>
 <hr>
