--- a/rfRunTex.html
+++ b/rfRunTex.html
@@ -63,7 +63,10 @@
 Cliquer sur "TeXLive.net" pour exécuter le code. Effectuer un copier/coller pour le sauvegarder.
 <hr>
 <div class="h">
-<pre id="pre0">\documentclass{article}
+<pre id="pre0">\documentclass[10pt,a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[french]{babel}
+\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage{amsmath}
 \begin{document}
     \textbf{Test : Affichage par défaut}
