--- a/rfRunPy.html
+++ b/rfRunPy.html
@@ -30,7 +30,7 @@
             <a onclick="shareCode()">Share</a>
             <a onclick="kbShortcuts()">Keyboard</a>
             <a onclick="aceSettings()">Settings</a>
-            <a id="github" href="https://github.com/rfmaths/rfPy" target="_blank"><i
+            <a id="github" href="https://github.com/ishaanbhimwal/online-python-compiler" target="_blank"><i
                     class="fa-brands fa-github"></i></a>
             <a href="javascript:void(0);" class="icon" onclick="resPanel()">
                 <i class="fa-solid fa-bars"></i>
